<resources>
    <string name="app_name">ShellApp</string>
    <string name="user">User</string>
    <string name="wiki_imagenencabezado">imagenEncabezado</string>
    <string name="wiki_imagenencabezado_2">imagenEncabezado_2</string>
    <string name="wikiTitulo">Conoce más sobre el mundo de las Tortugas!</string>
    <string name="wikibuttonuser">wikiButtonUser</string>
    <string name="wikibuttonedit">wikiButtonEdit</string>
    <string name="wikibuttonsearch">wikiButtonSearch</string>
    <string name="wikibuttonhome">wikiButtonHome</string>
    <string name="wikibuttonconfiguration">wikiButtonConfiguration</string>
    <string name="wikitortugasRio">Tortugas de Río</string>
    <string name="wikitortugasTierra">Tortugas de Tierra</string>
    <string name="wikitortugasMarinas">Tortugas Marinas</string>
    <string name="userUsername">User</string>
    <string name="userconfiguracion">userConfiguracion</string>
    <string name="userhome">userHome</string>
    <string name="usersearch">userSearch</string>
    <string name="useredit">userEdit</string>
    <string name="useruser">userUser</string>
    <string name="userencabezado">userEncabezado</string>
    <string name="userimageprofile">userImageProfile</string>
    <string name="wikiTaxonomia">Taxonomía</string>
    <string name="wikiSexo">Sexo</string>
    <string name="wikiAlimentacion">Alimentacion</string>
    <string name="wikiEspacio">Espacio</string>
    <string name="wikiCuidados">Cuidados</string>
    <string name="wikiEnfermedades">Enfermedades</string>
    <string name="wikiEsperanzaVida">Esperanza de Vida</string>
    <string name="wiki_tortugaPintada">tortugaPintada</string>
    <string name="tortugaPintada">tortugapintada</string>
    <string name="tortugaAligator">tortugaAligator</string>
    <string name="tortugaPintada2">tortugaPintada2</string>
    <string name="rtpintada">rtpintada</string>
    <string name="viewTortugaAfricana">viewTortugaAfricana</string>
    <string name="viewTortugaEstrellada">viewTortugaEstrellada</string>
    <string name="viewTortugaMediterranea">viewTortugaMediterranea</string>
    <string name="viewTortugaMora">viewTortugaMora</string>
    <string name="viewTortugaRusa">viewTortugaRusa</string>
    <string name="viewTortugaMarina">viewTortugaMarina</string>
    <string name="tortugaMarinaVivienda">tortugaMarinaVivienda</string>
    <string name="tortugaMarinaVivienda_2">Vivienda</string>
    <string name="tortugaMarinaCaracteristicas">Características</string>
    <string name="tortugaMarinaAmenazas">Amenazas</string>
    <string name="tortugaMarinaAyudar">Formas de ayudar</string>
    <string name="configuracion">Configuración</string>
    <string name="search">Search</string>
    <string name="ingresa_busqueda">Ingresa busqueda</string>
    <string name="buscar">Buscar</string>
</resources>