<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wiki">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#383838"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userUsername"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#383838"
            android:backgroundTint="#383838"
            android:gravity="bottom|fill"
            android:text="@string/user"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            tools:ignore="RtlCompat" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/userConfiguracion"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonconfiguration"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/setting"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <ImageButton
            android:id="@+id/userButtonHome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonhome"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/userButtonBuscar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonsearch"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/search"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/userButtonEdit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonedit"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/edit"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/userButtonUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonuser"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/user"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/wikiViewTortugaPintada"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="#8BC34A"
                    android:contentDescription="@string/wiki_imagenencabezado_2"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/shell_2" />

                <TextView
                    android:id="@+id/wikiTituloPrincipal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wikiTitulo"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textColor="#3C3C3C"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/loginViewBarra"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:background="#222131"></View>

                <TextView
                    android:id="@+id/wikiAcercaDe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:textColor="#3C3C3C"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/wikiAutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:textColor="#3C3C3C"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/loginViewBarra2"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:background="#222131"></View>

                <Button
                    android:id="@+id/wikiTortugasRio"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#FEF843"
                    android:text="@string/wikitortugasRio"
                    android:textAllCaps="false"
                    android:textColor="#3C3C3C"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/wikiTortugasTierra"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#4395FE"
                    android:text="@string/wikitortugasTierra"
                    android:textAllCaps="false"
                    android:textColor="#3C3C3C"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/wikiTortugasMar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#FE4343"
                    android:text="@string/wikitortugasMarinas"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>