<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tortugaAligator">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#383838"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userUsername"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#383838"
            android:backgroundTint="#383838"
            android:gravity="bottom|fill"
            android:text="@string/user"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            tools:ignore="RtlCompat" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/userConfiguracion"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonconfiguration"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/setting"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <ImageButton
            android:id="@+id/userButtonHome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonhome"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/home"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/userButtonBuscar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonsearch"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/search"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/userButtonEdit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonedit"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/edit"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/userButtonUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/wikibuttonuser"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/user"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#383838"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="#8BC34A"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/tortugaaligator"
                    android:contentDescription="@string/tortugaAligator" />

                <TextView
                    android:id="@+id/wikiTituloPrincipal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wikiTitulo"
                    android:background="#383838"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wikiAcercaDe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/loginViewBarra"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="#696969"
                    ></View>

                <TextView
                    android:id="@+id/wikiDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/wikiTituloTaxonomia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:layout_marginTop="10dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/wikiTaxonomia"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/wikiTaxonomia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/wikiTituloSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:layout_marginTop="10dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/wikiSexo"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/wikiSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/wikiTituloAlimentacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:layout_marginTop="10dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/wikiAlimentacion"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/wikiAlimentacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/wikiTituloEspacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:layout_marginTop="10dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/wikiEspacio"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/wikiEspacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/wikiTituloCuidados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:layout_marginTop="10dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/wikiCuidados"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/wikiCuidados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/wikiTituloEnfermedades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:layout_marginTop="10dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/wikiEnfermedades"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/wikiEnfermedades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/wikiTituloEsperanzaVida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:layout_marginTop="10dp"
                    android:gravity="fill_horizontal"
                    android:text="@string/wikiEsperanzaVida"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/wikiEsperanzaVida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#383838"
                    android:gravity="fill_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>